==> ppavlov000/boiler/IAR/Panel/Panel/Hardware_Atmel/functions.c <==
#include "inavr.h"
#include <iom128.h>
#include "..\System\main.h"

void Timer_Init()
{
	TCCR1A=0;
	TCCR1B=0x09;	
	TCCR1C=0;//(1<<FOC1A);
//	OCR1A=11059;	// 1 pulses per 1ms	
	OCR1A=1106;		// 10 pulses per 1ms		
//	OCR1A=110590;	// 1 pulses per 10ms
	TCNT1=0;	
	TIMSK|=(1<<OCIE1A);	
}

void watchdog_init()
{
	ADM706_PORT&=~adm_wd;
	ADM706_DIR|=adm_wd;
}

void reset()
{
	// Watchdog enable
	WDTCR = (1<<WDCE) | (1<<WDE);
	WDTCR = 0x08;
	while(1);
}

void watchdog_reset()
{
	ADM706_PORT|=adm_wd;
	__no_operation();
	ADM706_PORT&=~adm_wd;
	__watchdog_reset();
}

void tx_mode()
{
//	u8 i;
	upc_port|=upc_dir;
}

void rx_mode()
{
	upc_port&=~upc_dir;
}

void upc_hardware_init(u32 baund)
{
	u16 rate=0;
//#define CONSOLE_RATE	115200 //5//5;//35;//71;//9600//35;//19200//5;//115200	
	switch(baund)
	{
		case 115200: rate=5; break;
		case 57600: rate=11; break;
		case 38400: rate=17; break;
		case 28800: rate=23; break;
		case 19200: rate=35; break;
		case 14400: rate=47; break;		
		case 9600: rate=71; break;
		case 4800: rate=143; break;
		case 2400: rate=287; break;
	}
	upc_port_dir|=(upc_dir);
	upc_port&=~(upc_dir);
	UBRR1H = (unsigned char)(rate>>8);
	UBRR1L = (unsigned char)rate;
	/* Enable receiver and transmitter */
	UCSR1B =(1<<RXEN1)|(1<<TXEN1)|(1<<RXCIE1);
	/* Set frame format: 8data, 2stop bit */
	UCSR1C = (1<<USBS1)|(3<<UCSZ10);
	UDR1=' ';	
}

void TSC_Init()
{
	DDRD&=~0x01;
	PORTD|=0x01;
	PORTD&=~0x02;	
	
	spi_dir|=spi_ss+spi_sck+spi_mosi;
	spi_dir&=~spi_miso;
	spi_port&=~(spi_sck+spi_mosi);	
	spi_port|=(spi_ss);
	
//	SPCR=(1<<SPE);	
	SPCR=(0<<SPIE)+(1<<SPE)+(0<<DORD)+(1<<MSTR)+(0<<CPOL)+(0<<CPHA)+(3);
	SPSR=1;
}

u16 TSC_Transfer(u8 control,u8 newcontrol)
{
	u8 tmp;
	u16 r;
	u16 i;

	tmp=SPDR;
	tmp=SPDR;
		
	spi_port&=~spi_ss;

	for(i=0;i<500;i++)
		no_operation();
		
	tmp=control;	
	tmp|=0x83;
	SPDR = tmp;
	while ((SPSR & 0x80)==0); 	// Wait until SPI Tx empty & Rx Full	
	tmp=SPDR;

	tmp=0;
	SPDR = tmp;
	while ((SPSR & 0x80)==0); 	// Wait until SPI Tx empty & Rx Full	
	tmp=SPDR;	
	r=tmp;

	tmp=newcontrol;	
	tmp|=0x83;
	SPDR = tmp;
	while ((SPSR & 0x80)==0); 	// Wait until SPI Tx empty & Rx Full	
	tmp=SPDR;
	r=r<<8;
	r|=tmp;
	r=r>>3;
	
	tmp=0;
	SPDR = tmp;
	while ((SPSR & 0x80)==0); 	// Wait until SPI Tx empty & Rx Full	
	tmp=SPDR;
	
	for(i=0;i<500;i++)
		no_operation();
		
	spi_port|=spi_ss;
	no_operation();
	no_operation();
	no_operation();			
	no_operation();
	
	r=r & 0x0fff;	
	return r;
}

void hardware_init()
{
	MCUCR=0X01;
	MCUCR=0X00;
	// Watchdog disable
	WDTCR = (1<<WDCE) | (1<<WDE);
	WDTCR = 0x00;
	TWCR=0;
	// External interrupts
	EICRA=0xfe;	// all ints - rising adge
	EIMSK=0x00;	

	addr_dir&=~addr_allpins;
	addr_port|=addr_allpins;
	DDRB|=0x80;	
}

void lcd_reset(void)
{
    // Set Control Lines to outputs and High
    LCD_CONTROL =( LCD_WR | LCD_RD | LCD_CE_ALT | LCD_CD | LCD_RST);
    LCD_CONTROL_TRIS |= LCD_WR | LCD_RD | LCD_CE_ALT | LCD_CD | LCD_RST;
    LCD_DATA_BUS_TRIS = ALL_INPUTS;
    // Hold Reset Line for 1ms
//    LCD_CONTROL&=nLCD_RST;
    LCD_CONTROL|=LCD_BL;
    LCD_CONTROL&=~LCD_RST;
    Delay(10);
    LCD_CONTROL|=LCD_RST;
    Delay(10);
	LCD_CONTROL&=~LCD_CE_ALT;
}

void lcd_write(u8 data)
{
	u8 i;
	LCD_DATA_BUS_TRIS = ALL_OUTPUTS;
	LCD_CONTROL&=~LCD_WR;
	LCD_DATA_BUS_OUT = data;
	for(i=0;i<3;i++)no_operation();
	LCD_CONTROL|=LCD_WR;
}

u8 lcd_read(void)
{
	u8 i;
	u8 data;
	LCD_DATA_BUS_TRIS = ALL_INPUTS;
	LCD_CONTROL&=~LCD_RD;
	for(i=0;i<3;i++)no_operation();
	data = LCD_DATA_BUS_IN;
	LCD_CONTROL|=LCD_RD;
	return data;
}
