==> ppavlov000/boiler/IAR/Panel/Panel/Hardware_Renesas/functions.c <==
#include <intrinsics.h>
#include <iom16c62p.h>
#include <stdio.h>
#include "functions.h"
#include "..\System\main.h"
#define Xin_CLOCK	16000000UL
#define PLL_CLOCK	(Xin_CLOCK * 1)
#define F1_CLOCK	PLL_CLOCK
#define F8_CLOCK	(F1_CLOCK/8)
#define BCLK_CLOCK	PLL_CLOCK
#define TICKS_PER_SEC 1000
#define Ok	1

void Timer_Init()
{
	TickCnt = 0;

	TABSR_bit.TA0S = 0; 	// stop timer

	TA0MR = 0x44;			// time mode, no gate, f8

	TA0 = F8_CLOCK / TICKS_PER_SEC - 1;

	TA0IC = 1;//PRIORITY_TICKS;	// set int level

	TABSR_bit.TA0S = 1; 	// start timer
}

void watchdog_init()
{
#ifdef USE_WATCHDOG
	WDC = 0x80;

	PRCR_bit.PRC1 = 1;	// enable write to PM

	PM1_bit.PM12 = 1;	// reset when the watchdog timer underflows
	PM2_bit.PM22 = 0;	// WDT Count Source: 0:CPU clock 1:On-chip oscillator

	PRCR_bit.PRC1 = 0;	// disable write

	WDC = 0x80;
#endif
}

void watchdog_reset()
{
#ifdef USE_WATCHDOG
	WDTS = 0;
#endif
}

void reset()
{
	PRCR_bit.PRC1 = 1; // enable write to PM

	PM0_bit.PM03  = 1; // software reset

	PRCR_bit.PRC1 = 0; // disable write to PM
//	while(1);
}

void tx_mode()
{
	P6_bit.P6_5 = 1;
}

void rx_mode()
{
	P6_bit.P6_5 = 0;
}

void upc_hardware_init(u32 baund)
{
#ifdef UART485_USE_RX_BUF
	memset(&Uart485, 0, sizeof(Uart485));
#endif

	U0C1_bit.TE = 0;	// Transmit disable
	U0C1_bit.RE = 0;	// Receive disable

	// --- pin settings ----------------------------------------
	// TXD0 out
	PD6_bit.PD6_3 = 1;

	// RXD0 in
	PD6_bit.PD6_2 = 0;

	// nRx/Tx select
	PD6_bit.PD6_5 = 1;

	//--- Special Mode Registers -------------------------------
	U0SMR  = 0;
	U0SMR2 = 0;
	U0SMR3 = 0;
	U0SMR4 = 0;

	//--- Baud Rate Register -----------------------------------
	U0BRG = (F1_CLOCK / (baund * 16)) - 1;

	//--- Transmit/Receive Mode Register -----------------------
	U0MR_bit.SMD0 = 1;	// mode UART 8bit
	U0MR_bit.SMD1 = 0;
	U0MR_bit.SMD2 = 1;

	U0MR_bit.CKDIR = 0;	// internal clock

	U0MR_bit.STPS = 0;	// 1 stop bit

//	U0MR_bit.PRY = 0;	// 0 : Odd parity / 1 : Even parity
	U0MR_bit.PRYE = 0;	// disable parity

	U0MR_bit.IOPOL = 0;	// not inversed

	//--- Transmit/Receive Control Register 0 ------------------
	U0C0_bit.CLK0 = 0;	// 0 1: Selects f1
	U0C0_bit.CLK1 = 0;

//	U0C0_bit.CRS = 0;	// 0 : Selects CTS function / 1 : Selects RTS function
	U0C0_bit.CRD = 1;	// Disables CTS/RTS function

	U0C0_bit.NCH = 0;	// 0 : TxDi/SDAi and SCLi are ports for the CMOS output

	U0C0_bit.CKPOL = 0;	// 0 : tx on the falling edge rx on the rising edge

	U0C0_bit.UFORM = 0;	// 0 : LSB first / 1 : MSB first

	//--- Transmit/Receive Control Register 1 ------------------
	U0C1_bit.TE = 1;	// Transmit enable
	U0C1_bit.TI = 0;	// 

	U0C1_bit.RE = 1;	// Receive enable

//	U0C1_bit.U0RRM = 0;

	U0C1_bit.U0LCH = 0;	// Data Logic Select Bit 0: Not inversed / 1: Inverse

//	U0C1_bit.U0ERE = 0;	// 

    UCON_bit.U0IRS	= 0;
    UCON_bit.U0RRM	= 0;
    UCON_bit.CLKMD0	= 0;
    UCON_bit.CLKMD1	= 0;
    UCON_bit.RCSP	= 0;

	S0RIC = 2;
}

void TSC_Init()
{
	PD5_bit.PD5_0 = 1; // DCLK
	PD5_bit.PD5_1 = 1; // DOUT
	PD5_bit.PD5_2 = 0; // DIN
	PD5_bit.PD5_3 = 1; // nCS
	PD5_bit.PD5_4 = 0; // BUSY

	ts_nCS  = 1;
	ts_DCLK = 0;
	ts_DOUT = 0;
}

u16 TSC_Transfer(u8 control,u8 newcontrol)
{
	u16 n;

	__disable_interrupt();

	ts_nCS = 0;

	ts_rw(control | 0x80);
	n = ts_rw(0);
	n <<= 8;
	n |= ts_rw(0);
	n >>= 3;

	ts_nCS = 1;

	__enable_interrupt();

	return n;
}

void hardware_init()
{
	__set_interrupt_level(0);

	//--- init Voltage Detection Register (VCR2) --------------
	PRCR_bit.PRC3 = 1;	// enable write

	VCR2 = 0xC0;

	PRCR_bit.PRC3 = 0;	// disable write

	//--- init system clock control register (CM1) ------------
	PRCR_bit.PRC0 = 1;	// enable write

	CM1_bit.CM10 = 0;	// all clock oscillates
	CM1_bit.CM11 = 0;	// use PLL clock

	CM1_bit.CM16 = 0;	// Main Clock Division: 1
	CM1_bit.CM17 = 0;	// 

	PRCR_bit.PRC0 = 0;	// disable write

	//--- init system clock control register (CM2) ------------
	PRCR_bit.PRC0 = 1;	// enable write

	CM2_bit.CM20 = 0;	// oscillation stop detect function

	PRCR_bit.PRC0 = 0;	// disable write

	//--- init system clock control register (CM0) ------------
	PRCR_bit.PRC0 = 1;	// enable write to 

	CM0_bit.CM00 = 0;	// CLKout mode f8
	CM0_bit.CM01 = 1;

	CM0_bit.CM02 = 0;	// no stop in WAIT mode

//	CM0_bit.CM03 = 1;	// Xcin - Xcout drive high
	CM0_bit.CM04 = 0;	// Xc work as IO port

	CM0_bit.CM05 = 0;	// main clock run

	CM0_bit.CM06 = 0;	// Main Clock Division: CM16 and CM17 enabled

	CM0_bit.CM07 = 0;	// System Clock Select Bit: Main clock

	PRCR_bit.PRC0 = 0;	// disable write

	//--- init processor mode (PM2) ---------------------------
//	PRCR_bit.PRC1 = 1;	// enable write to PM

//	PM2_bit.PM22 = 0;	// WDT Count Source: 1:On-chip oscillator

//	PRCR_bit.PRC1 = 0;	// disable write

	//--- Peripheral Clock Select Register (PCLKR) ------------
	PRCR_bit.PRC0 = 1;	// enable write to 

	PCLKR = 0x03;
//	PCLKR_bit.PCLK0 = 1;// Timers A, B Clock Select Bit: f1
//	PCLKR_bit.PCLK1 = 1;// SI/O Clock Select Bit: f1SIO

	PRCR_bit.PRC0 = 0;	// disable write

	//--- backlight -------------------------------------------
	TA1MR = 0x27;			// PWM mode, Pulse is output, 8 bit mode, f1

	TA1 = 0;

	TABSR_bit.TA1S = 1; 	// start timer

	//--- block a enable --------------------------------------
	PRCR_bit.PRC1 = 1;	// enable write

	PM1_bit.PM10  = 1;

	PRCR_bit.PRC1 = 0;	// disable write
}

void lcd_reset(void)
{
	//--- set p1 as output ----------------------------
	lcd_CtrlDir = 0xff;
	lcd_Ctrl    = 0xff;

	//-------------------------------------------------
	lcd_nReset = 1;
    Delay(100);
	lcd_nReset = 0;
    Delay(100);
	lcd_nReset = 1;
    Delay(100);

	//-------------------------------------------------
	lcd_nMD2   = 1; // H: 32 columns ; L: 40 columns
	lcd_FS1    = 0; // H: 6*8, L: 8*8

	lcd_nCe = 0;

//	lcd_init(); !!!
}

void lcd_write(u8 data)
{
//	lcd_nCe = 0;
	lcd_DataDir = 0xff;

	lcd_nWr = 0;

	lcd_Data = data;

	lcd_nWr = 1;
//	lcd_nCe = 1;

//	lcd_DataDir = 0x00;
//	__no_operation();
}

u8 lcd_read(void)
{
	u8 data;

	lcd_DataDir = 0x00;

//	lcd_nCe = 0;
	lcd_nRd = 0;

//	__no_operation();
	data = lcd_Data;

	lcd_nRd = 1;
//	lcd_nCe = 1;
	return data;
}
